unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/PC_Carpet_Planning_Request__c.object-meta.xml
<CustomObject>
    <label>Carpet Plan Request</label>
    <nameField>
        <displayFormat>CPR-{000000}</displayFormat>
        <label>Carpet Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Carpet Plan Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>