unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Carpet_Delivery_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Delivery_Date_Time__c</fullName>
    <inlineHelpText>Enter if different from first day of GES Move-In</inlineHelpText>
    <label>Carpet Delivery Date/Time</label>
    <type>DateTime</type>
</CustomField>