unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Carpet_Grade__c.field-meta.xml
<CustomField>
    <fullName>Carpet_Grade__c</fullName>
    <label>Requested Carpet Grade</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Requested</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
                <default>true</default>
                <label>Premium</label>
            </value>
            <value>
                <fullName>Economy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>