unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/CPR_Claimed_By__c.field-meta.xml
<CustomField>
    <fullName>CPR_Claimed_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Plan Claimed By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Carpet_Plan_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>