unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/CR_Facility__c.field-meta.xml
<CustomField>
    <fullName>CR_Facility__c</fullName>
    <formula>CR_Project_Central_Show__r.Facility__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Facility</label>
    <type>Text</type>
</CustomField>