unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/CR_Project_Number__c.field-meta.xml
<CustomField>
    <fullName>CR_Project_Number__c</fullName>
    <formula>CR_Project_Central_Show__r.Job_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Number</label>
    <type>Text</type>
</CustomField>