unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/CR_Show_End_Date__c.field-meta.xml
<CustomField>
    <fullName>CR_Show_End_Date__c</fullName>
    <formula>CR_Project_Central_Show__r.Show_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show End Date</label>
    <type>Date</type>
</CustomField>