unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/CR_YRMO__c.field-meta.xml
<CustomField>
    <fullName>CR_YRMO__c</fullName>
    <formula>CR_Project_Central_Show__r.YRMO__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YRMO</label>
    <type>Text</type>
</CustomField>