unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Folder_Link__c.field-meta.xml
<CustomField>
    <fullName>Folder_Link__c</fullName>
    <label>Folder Link</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>