unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Other_Aisle_Carpet_Color__c.field-meta.xml
<CustomField>
    <fullName>Other_Aisle_Carpet_Color__c</fullName>
    <label>Other Aisle Carpet Color</label>
    <length>20</length>
    <type>Text</type>
</CustomField>