unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Other_Areas_3__c.field-meta.xml
<CustomField>
    <fullName>Other_Areas_3__c</fullName>
    <defaultValue>&quot;Servicenter&quot;</defaultValue>
    <label>Other Areas 3</label>
    <length>30</length>
    <type>Text</type>
</CustomField>