unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Other_Areas_4__c.field-meta.xml
<CustomField>
    <fullName>Other_Areas_4__c</fullName>
    <defaultValue>&quot;General Session&quot;</defaultValue>
    <label>Other Areas 4</label>
    <length>30</length>
    <type>Text</type>
</CustomField>