unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Other_Areas_Color_4__c.field-meta.xml
<CustomField>
    <fullName>Other_Areas_Color_4__c</fullName>
    <label>Color 4</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Black</fullName>
            </value>
            <value>
                <fullName>Blue</fullName>
            </value>
            <value>
                <fullName>Blue Jay</fullName>
            </value>
            <value>
                <fullName>Cayenne</fullName>
            </value>
            <value>
                <fullName>Gray</fullName>
            </value>
            <value>
                <fullName>Green</fullName>
            </value>
            <value>
                <fullName>Pepper</fullName>
            </value>
            <value>
                <fullName>Red</fullName>
            </value>
            <value>
                <fullName>Safari</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>