unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Other_Carpet_Areas_Notes__c.field-meta.xml
<CustomField>
    <fullName>Other_Carpet_Areas_Notes__c</fullName>
    <label>Other Carpet Notes</label>
    <type>TextArea</type>
</CustomField>