unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Request_Type__c.field-meta.xml
<CustomField>
    <fullName>Request_Type__c</fullName>
    <label>Request Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Preliminary Budget</fullName>
            </value>
            <value>
                <fullName>Initial (for 12 Week)</fullName>
            </value>
            <value>
                <fullName>Initial (for 6 Week)</fullName>
            </value>
            <value>
                <fullName>Initial (for 3 Week)</fullName>
                <label>Initial (for 3 Week) ORDER</label>
            </value>
            <value>
                <fullName>Revision</fullName>
                <label>REVISION TO ORDER</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>