unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Special_Delivery_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Special_Delivery_Instructions__c</fullName>
    <label>Special Delivery Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>