unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/Start_of_3_Week_Plan_order__c.field-meta.xml
<CustomField>
    <fullName>Start_of_3_Week_Plan_order__c</fullName>
    <formula>First_Move_In_Date__c - 35</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Start of 3 Week Plan (order)</label>
    <type>Date</type>
</CustomField>