unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/X12_week_approval_due_date__c.field-meta.xml
<CustomField>
    <fullName>X12_week_approval_due_date__c</fullName>
    <formula>First_Move_In_Date__c - 84</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The 12 week plan must be approved 12 weeks before first move-in date.</inlineHelpText>
    <label>12 Week Approval Due Date</label>
    <type>Date</type>
</CustomField>