unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/X3_week_approval_due_date__c.field-meta.xml
<CustomField>
    <fullName>X3_week_approval_due_date__c</fullName>
    <formula>First_Move_In_Date__c - 21</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The 3 week plan must be approved 3 weeks before first move-in date.</inlineHelpText>
    <label>3 Week Approval Due Date</label>
    <type>Date</type>
</CustomField>