unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/fields/X6_week_approval_due_date__c.field-meta.xml
<CustomField>
    <fullName>X6_week_approval_due_date__c</fullName>
    <formula>First_Move_In_Date__c - 42</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The 6 week plan must be approved 6 weeks before first move-in date.</inlineHelpText>
    <label>6 Week Approval Due Date</label>
    <type>Date</type>
</CustomField>