unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/listViews/All_Active_Carpet_Plan_requests.listView-meta.xml
<ListView>
    <fullName>All_Active_Carpet_Plan_requests</fullName>
    <columns>First_Move_In_Date__c</columns>
    <columns>CR_Show_ID__c</columns>
    <columns>CR_YRMO__c</columns>
    <columns>CR_Project_Number__c</columns>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>Status__c</columns>
    <columns>CPR_Claimed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Complete</value>
    </filters>
    <label>All Active Carpet Plan requests</label>
</ListView>