unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/listViews/Budget_Open_Carpet_Planning_Requests.listView-meta.xml
<ListView>
    <fullName>Budget_Open_Carpet_Planning_Requests</fullName>
    <columns>X12_week_approval_due_date__c</columns>
    <columns>NAME</columns>
    <columns>CR_Show_ID__c</columns>
    <columns>CR_YRMO__c</columns>
    <columns>CR_Project_Number__c</columns>
    <columns>CR_Facility_ID__c</columns>
    <columns>CR_Submitted_Date__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CPR_Claimed_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>New,Complete</value>
    </filters>
    <filters>
        <field>Request_Type__c</field>
        <operation>equals</operation>
        <value>Preliminary Budget</value>
    </filters>
    <label>Budget-Open Carpet Planning Requests</label>
</ListView>