unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/listViews/My_Approved_Carpet_Plans.listView-meta.xml
<ListView>
    <fullName>My_Approved_Carpet_Plans</fullName>
    <columns>NAME</columns>
    <columns>CR_Show_ID__c</columns>
    <columns>CR_Project_Number__c</columns>
    <columns>CR_Facility_ID__c</columns>
    <columns>CR_Submitted_Date__c</columns>
    <columns>Start_of_12_Week_Plan_order__c</columns>
    <columns>Start_of_6_Week_Plan_order__c</columns>
    <columns>Start_of_3_Week_Plan_order__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <label>00 My Approved Carpet Plans</label>
</ListView>