unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/listViews/National_Carpet_Planning_PC_Carpet_Planning_Request.listView-meta.xml
<ListView>
    <fullName>National_Carpet_Planning_PC_Carpet_Planning_Request</fullName>
    <filterScope>Queue</filterScope>
    <label>National Carpet Planning</label>
    <queue>National_Carpet_Planning</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>