unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/listViews/X01_Claimed_by_Casey.listView-meta.xml
<ListView>
    <fullName>X01_Claimed_by_Casey</fullName>
    <columns>NAME</columns>
    <columns>CPR_Claimed_By__c</columns>
    <columns>CR_Show_ID__c</columns>
    <columns>CR_Project_Number__c</columns>
    <columns>CR_Facility_ID__c</columns>
    <columns>CR_Submitted_Date__c</columns>
    <columns>Request_Type__c</columns>
    <columns>Start_of_12_Week_Plan_order__c</columns>
    <columns>Start_of_6_Week_Plan_order__c</columns>
    <columns>Start_of_3_Week_Plan_order__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CPR_Claimed_By__c</field>
        <operation>equals</operation>
        <value>Casey Thomas</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>New,CSM Approval,Complete</value>
    </filters>
    <label>02b Claimed by Casey</label>
</ListView>