unpackaged/main/default/objects/PC_Carpet_Planning_Request__c/listViews/X05_Upcoming_Order_Deadlines.listView-meta.xml
<ListView>
    <fullName>X05_Upcoming_Order_Deadlines</fullName>
    <columns>NAME</columns>
    <columns>CR_Show_ID__c</columns>
    <columns>CR_Project_Number__c</columns>
    <columns>CR_Facility_ID__c</columns>
    <columns>CR_Submitted_Date__c</columns>
    <columns>Start_of_12_Week_Plan_order__c</columns>
    <columns>Start_of_6_Week_Plan_order__c</columns>
    <columns>Start_of_3_Week_Plan_order__c</columns>
    <columns>Status__c</columns>
    <columns>CREATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>First_Move_In_Date__c</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>05 Upcoming Move-In Shows</label>
</ListView>